@@ -2247,16 +2247,16 @@ void	DCsync_configuration()
 {
 	const char		*__function_name = "DCsync_configuration";
 
-	DB_RESULT		item_result;
-	DB_RESULT		trig_result;
-	DB_RESULT		tdep_result;
-	DB_RESULT		func_result;
-	DB_RESULT		host_result;
-	DB_RESULT		htmpl_result;
-	DB_RESULT		gmacro_result;
-	DB_RESULT		hmacro_result;
-	DB_RESULT		if_result;
-	DB_RESULT		conf_result;
+	DB_RESULT		item_result = NULL;
+	DB_RESULT		trig_result = NULL;
+	DB_RESULT		tdep_result = NULL;
+	DB_RESULT		func_result = NULL;
+	DB_RESULT		host_result = NULL;
+	DB_RESULT		htmpl_result = NULL;
+	DB_RESULT		gmacro_result = NULL;
+	DB_RESULT		hmacro_result = NULL;
+	DB_RESULT		if_result = NULL;
+	DB_RESULT		conf_result = NULL;
 
 	int			i;
 	double			sec, csec, isec, tsec, dsec, fsec, hsec, htsec, gmsec, hmsec, ifsec,
@@ -2266,7 +2266,7 @@ void	DCsync_configuration()
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
 	sec = zbx_time();
-	conf_result = DBselect(
+	if (NULL == (conf_result = DBselect(
 			/* SQL statement must be synced with DCload_config() */
 			"select alert_history,event_history,refresh_unsupported,discovery_groupid,snmptrap_logging,"
 				"severity_name_0,severity_name_1,severity_name_2,"
@@ -2274,11 +2274,14 @@ void	DCsync_configuration()
 			" from config"
 			" where 1=1"
 				DB_NODE,
-			DBnode_local("configid"));
+			DBnode_local("configid"))))
+	{
+		goto out;
+	}
 	csec = zbx_time() - sec;
 
 	sec = zbx_time();
-	item_result = DBselect(
+	if (NULL == (item_result = DBselect(
 			"select i.itemid,i.hostid,h.proxy_hostid,i.type,i.data_type,i.value_type,i.key_,"
 				"i.snmp_community,i.snmp_oid,i.port,i.snmpv3_securityname,"
 				"i.snmpv3_securitylevel,i.snmpv3_authpassphrase,i.snmpv3_privpassphrase,"
@@ -2292,11 +2295,14 @@ void	DCsync_configuration()
 				DB_NODE,
 			HOST_STATUS_MONITORED,
 			ITEM_STATUS_ACTIVE, ITEM_STATUS_NOTSUPPORTED,
-			DBnode_local("i.itemid"));
+			DBnode_local("i.itemid"))))
+	{
+		goto out;
+	}
 	isec = zbx_time() - sec;
 
 	sec = zbx_time();
-	trig_result = DBselect(
+	if (NULL == (trig_result = DBselect(
 			"select distinct t.triggerid,t.description,t.expression,t.error,"
 				"t.priority,t.type,t.value,t.value_flags"
 			" from hosts h,items i,functions f,triggers t"
@@ -2312,20 +2318,26 @@ void	DCsync_configuration()
 			ITEM_STATUS_ACTIVE, ITEM_STATUS_NOTSUPPORTED,
 			TRIGGER_STATUS_ENABLED,
 			ZBX_FLAG_DISCOVERY_CHILD,
-			DBnode_local("h.hostid"));
+			DBnode_local("h.hostid"))))
+	{
+		goto out;
+	}
 	tsec = zbx_time() - sec;
 
 	sec = zbx_time();
-	tdep_result = DBselect(
+	if (NULL == (tdep_result = DBselect(
 			"select d.triggerid_down,d.triggerid_up"
 			" from trigger_depends d"
 			" where 1=1" DB_NODE
 			" order by d.triggerid_down",
-			DBnode_local("d.triggerid_down"));
+			DBnode_local("d.triggerid_down"))))
+	{
+		goto out;
+	}
 	dsec = zbx_time() - sec;
 
 	sec = zbx_time();
-	func_result = DBselect(
+	if (NULL == (func_result = DBselect(
 			"select i.itemid,f.functionid,f.function,f.parameter,t.triggerid"
 			" from hosts h,items i,functions f,triggers t"
 			" where h.hostid=i.hostid"
@@ -2340,11 +2352,14 @@ void	DCsync_configuration()
 			ITEM_STATUS_ACTIVE, ITEM_STATUS_NOTSUPPORTED,
 			TRIGGER_STATUS_ENABLED,
 			ZBX_FLAG_DISCOVERY_CHILD,
-			DBnode_local("h.hostid"));
+			DBnode_local("h.hostid"))))
+	{
+		goto out;
+	}
 	fsec = zbx_time() - sec;
 
 	sec = zbx_time();
-	host_result = DBselect(
+	if (NULL == (host_result = DBselect(
 			"select hostid,proxy_hostid,host,ipmi_authtype,ipmi_privilege,ipmi_username,"
 				"ipmi_password,maintenance_status,maintenance_type,maintenance_from,"
 				"errors_from,available,disable_until,snmp_errors_from,"
@@ -2355,44 +2370,59 @@ void	DCsync_configuration()
 			" where status in (%d,%d,%d)"
 				DB_NODE,
 			HOST_STATUS_MONITORED, HOST_STATUS_PROXY_ACTIVE, HOST_STATUS_PROXY_PASSIVE,
-			DBnode_local("hostid"));
+			DBnode_local("hostid"))))
+	{
+		goto out;
+	}
 	hsec = zbx_time() - sec;
 
 	sec = zbx_time();
-	htmpl_result = DBselect(
+	if (NULL == (htmpl_result = DBselect(
 			"select hostid,templateid"
 			" from hosts_templates"
 			" where 1=1"
 				DB_NODE
 			" order by hostid,templateid",
-			DBnode_local("hosttemplateid"));
+			DBnode_local("hosttemplateid"))))
+	{
+		goto out;
+	}
 	htsec = zbx_time() - sec;
 
 	sec = zbx_time();
-	gmacro_result = DBselect(
+	if (NULL == (gmacro_result = DBselect(
 			"select globalmacroid,macro,value"
 			" from globalmacro"
 			" where 1=1"
 				DB_NODE,
-			DBnode_local("globalmacroid"));
+			DBnode_local("globalmacroid"))))
+	{
+		goto out;
+	}
 	gmsec = zbx_time() - sec;
 
 	sec = zbx_time();
-	hmacro_result = DBselect(
+	if (NULL == (hmacro_result = DBselect(
 			"select hostmacroid,hostid,macro,value"
 			" from hostmacro"
 			" where 1=1"
 				DB_NODE,
-			DBnode_local("hostmacroid"));
+			DBnode_local("hostmacroid"))))
+	{
+		goto out;
+	}
 	hmsec = zbx_time() - sec;
 
 	sec = zbx_time();
-	if_result = DBselect(
+	if (NULL == (if_result = DBselect(
 			"select interfaceid,hostid,type,main,useip,ip,dns,port"
 			" from interface"
 			" where 1=1"
 				DB_NODE,
-			DBnode_local("interfaceid"));
+			DBnode_local("interfaceid"))))
+	{
+		goto out;
+	}
 	ifsec = zbx_time() - sec;
 
 	START_SYNC;
@@ -2535,7 +2565,7 @@ void	DCsync_configuration()
 	zbx_mem_dump_stats(strpool->mem_info);
 
 	FINISH_SYNC;
-
+out:
 	DBfree_result(conf_result);
 	DBfree_result(item_result);
 	DBfree_result(trig_result);
